syntax = "proto3";

option java_package = "hmda.persistence.serialization";
option optimize_for = SPEED;

import "submission.proto";
import "validation.proto";
import "submission.processing.commands.proto";

message HmdaRowParsedErrorMessage {
    int32 rowNumber = 1;
    string estimatedULI = 3;
    repeated FieldParserErrorMessage errors = 2;
}

message HmdaRowParsedCountMessage {
    int32 count = 1;
}

message HmdaParserErrorStateMessage {
    repeated HmdaRowParsedErrorMessage transmittalSheetErrors = 1;
    repeated HmdaRowParsedErrorMessage larErrors = 2;
    int32 totalErrors = 3;
}

message HmdaRowValidatedErrorMessage {
    int32 rowNumber = 1;
    repeated ValidationErrorMessage validationErrors = 2;
}

message EditSummaryMessage {
    string editName = 1;
    ValidationErrorTypeMessage validationErrorType = 2;
    ValidationErrorEntityMessage validationErrorEntity = 3;
}

message HmdaValidationErrorStateMessage {
    int32 statusCode = 1;
    repeated EditSummaryMessage syntactical = 2;
    repeated EditSummaryMessage validity = 3;
    repeated EditSummaryMessage quality = 4;
    repeated EditSummaryMessage macro = 5;
    bool qualityVerified = 6;
    bool macroVerified = 7;
}

message HmdaMacroValidatedErrorMessage {
    ValidationErrorMessage validationError = 1;
}

message QualityVerifiedMessage {
    SubmissionIdMessage submissionId = 1;
    bool verified = 2;
    int32 statusCode = 3;
}

message MacroVerifiedMessage {
    SubmissionIdMessage submissionId = 1;
    bool verified = 2;
    int32 statusCode = 3;
}

message NotReadyToBeVerifiedMessage {
    SubmissionIdMessage submissionId = 1;
}

message SyntacticalValidityCompletedMessage {
    SubmissionIdMessage submissionId = 1;
    int32 statusCode = 2;
}

message QualityCompletedMessage {
    SubmissionIdMessage submissionId = 1;
    int32 statusCode = 2;
}

message MacroCompletedMessage {
    SubmissionIdMessage submissionId = 1;
    int32 statusCode = 2;
}

message SubmissionSignedMessage {
    SubmissionIdMessage submissionId = 1;
    int64 timestamp = 2;
    int32 statusCode = 3;
}

message SubmissionNotReadyToBeSignedMessage {
    SubmissionIdMessage submissionId = 1;
}

message VerificationStatusMessage {
    bool qualityVerified = 1;
    bool macroVerified = 2;
}


